Optimize FXComponentFactory